This broke 2.1.22. It seems to have passed my tests because the connect was fast enough and did not took the EINPROGRESS code path.
Description
Description
Revisions and Commits
Revisions and Commits
rG GnuPG | |||
rG482fd5758c1b dirmngr,w32: Fix http connection timeout problem. |
Status | Assigned | Task | ||
---|---|---|---|---|
Resolved | • werner | T3318 Keyserver access on Windows broken (Resource Temporary Unavailable) | ||
Resolved | • werner | T3319 Fix connect with timeout on Windows |